tests/error/linear_errors/branch_use_field2.err
Error: Copy violation (at $FILE:22:11)
   | 
20 |     if b:
21 |         measure(s.q2)
22 |     return s
   |            ^ Field `s.q2` with non-copyable type `qubit` cannot be
   |              returned ...
   | 
21 |         measure(s.q2)
   |                 ---- since it was already consumed here

Guppy compilation failed due to 1 previous error
